deployments/gke-gateway-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-red
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-red
  template:
    metadata:
      labels:
        app: nginx-red
    spec:
      containers:
      - name: nginx
        image: us-central1-docker.pkg.dev/project-a18c5455-e17b-4297-b3e/nginx-repo/nginx-image-red:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
