deployments/gke-gateway-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-red-svc
spec:
  type: ClusterIP
  selector:
    app: nginx-red
  ports:
    - port: 80
      targetPort: 80
